[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Scripts/Main/InGameMenus/GetLocationDockFromUserMenu.gd" type="Script" id=1]

[node name="StrategyCardMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1029.0
margin_bottom = 601.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPrompt" type="Label" parent="."]
margin_left = 310.703
margin_top = 66.3784
margin_right = 729.703
margin_bottom = 153.378
text = "this is where the text will go for the user prompts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationDockOneButton" type="Button" parent="."]
margin_left = 154.432
margin_top = 460.514
margin_right = 217.432
margin_bottom = 535.514
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationDockTwoButton" type="Button" parent="."]
margin_left = 474.329
margin_top = 465.271
margin_right = 537.329
margin_bottom = 540.271

[node name="LocationDockThreeButton" type="Button" parent="."]
margin_left = 779.955
margin_top = 475.974
margin_right = 842.955
margin_bottom = 550.974

[node name="LocationDockFourButton" type="Button" parent="."]
margin_left = 147.297
margin_top = 302.35
margin_right = 210.297
margin_bottom = 377.35

[node name="LocationDockFiveButton" type="Button" parent="."]
margin_left = 475.518
margin_top = 317.81
margin_right = 538.518
margin_bottom = 392.81

[node name="LocationDockSixButton" type="Button" parent="."]
margin_left = 782.334
margin_top = 313.053
margin_right = 845.334
margin_bottom = 388.053

[node name="LocationDockSevenButton" type="Button" parent="."]
margin_left = 144.919
margin_top = 162.023
margin_right = 207.919
margin_bottom = 237.023

[node name="LocationDockEightButton" type="Button" parent="."]
margin_left = 471.951
margin_top = 167.969
margin_right = 534.951
margin_bottom = 242.969

[node name="LocationDockNineButton" type="Button" parent="."]
margin_left = 783.523
margin_top = 160.834
margin_right = 846.523
margin_bottom = 235.834
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LocationDockOneButton" to="." method="_on_LocationDockOneButton_pressed"]
[connection signal="pressed" from="LocationDockTwoButton" to="." method="_on_LocationDockTwoButton_pressed"]
[connection signal="pressed" from="LocationDockThreeButton" to="." method="_on_LocationDockThreeButton_pressed"]
[connection signal="pressed" from="LocationDockFourButton" to="." method="_on_LocationDockFourButton_pressed"]
[connection signal="pressed" from="LocationDockFiveButton" to="." method="_on_LocationDockFiveButton_pressed"]
[connection signal="pressed" from="LocationDockSixButton" to="." method="_on_LocationDockSixButton_pressed"]
[connection signal="pressed" from="LocationDockSevenButton" to="." method="_on_LocationDockSevenButton_pressed"]
[connection signal="pressed" from="LocationDockEightButton" to="." method="_on_LocationDockEightButton_pressed"]
[connection signal="pressed" from="LocationDockNineButton" to="." method="_on_LocationDockNineButton_pressed"]
